--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src/**/*.{js,jsx}",
-    "fix": "eslint src/**/*.{js,jsx} --fix"
+    "fix": "eslint src/**/*.{js,jsx} --fix",
+    "test": "vitest --silent"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "eslint": "^7.32.0 || ^8.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -18,7 +21,8 @@
     "react-router-dom": "^6.10.0",
     "sass": "^1.62.0",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-prettier": "^0.0.4"
+    "vite-plugin-prettier": "^0.0.4",
+    "vitest": "^0.31.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -32,6 +36,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "jsdom": "^22.0.0",
     "prettier": "^2.8.8",
     "vite": "^4.2.0"
   }
